Fix the config for postgres instances. Add sync settings

--- a/ch2/replication/samples/pg/conf/standby.conf
+++ b/ch2/replication/samples/pg/conf/standby.conf
@@ -1,14 +1,11 @@
-# Configuration for Standby Database (postgres-standby)
-
-# General Settings
 listen_addresses = '*'
 port = 5432
 
 # Disable Writes on Read-Replica
 default_transaction_read_only = on
 
-# CRITICAL STANDBY SETTING
 hot_standby = on
+recovery_min_apply_delay = '500ms'
 
 # Logging
 log_destination = 'stderr' 
