--- a/ch2/replication/samples/pg/conf/primary.conf
+++ b/ch2/replication/samples/pg/conf/primary.conf
@@ -11,8 +11,11 @@ log_min_duration_statement = '250ms' # Log slow queries
 log_connections = on
 log_disconnections = on
 log_hostname = on
-log_statement = 'ddl' # Log CREATE, ALTER, DROP
+log_statement = 'ddl'
 
 wal_level = replica              # Required for replication
 max_wal_senders = 5              # Max number of replicas that can connect
 max_replication_slots = 5        # Max number of replication slots
+# To enable the synchronous replication
+# synchronous_commit = on
+# synchronous_standby_names = 'FIRST 1 ("postgres-standby")'  
