--- a/ch2/replication/samples/pg/docker-compose.yaml
+++ b/ch2/replication/samples/pg/docker-compose.yaml
@@ -1,4 +1,21 @@
 services:
+
+  pgbouncer:
+    image: edoburu/pgbouncer:latest
+    container_name: pgbouncer
+    ports:
+      - "6432:6432" # Clients connect here (new single point of entry)
+    volumes:
+      - ./conf/pgbouncer.ini:/etc/pgbouncer/pgbouncer.ini:ro
+      - ./conf/users.txt:/etc/pgbouncer/users.txt:ro # Auth file
+    environment:
+      DB_HOST: postgres-primary # Default route for pooling
+    networks:
+      - pg_network
+    depends_on:
+      - postgres-primary
+      - postgres-sync-standby
+
   postgres-primary:
     image: postgres:16-alpine
     container_name: postgres-primary
@@ -9,9 +26,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./conf/primary.conf:/usr/local/share/postgresql/postgresql.conf
-      # Mount the setup script
-      - ./scripts/primary.setup.sh:/docker-entrypoint-initdb.d/setup_db.sh
+      - ./conf/primary.conf:/usr/local/share/postgresql/postgresql.conf 
       # pagila data init
       - ./backups/pagila-schema.sql:/docker-entrypoint-initdb.d/1-pagila-schema.sql
       - ./backups/pagila-schema-jsonb.sql:/docker-entrypoint-initdb.d/1-pagila-schema-jsonb.sql
@@ -20,6 +35,8 @@ services:
       - ./backups/pagila-data-yum-jsonb.backup:/docker-entrypoint-initdb.d/pagila-data-yum-jsonb.backup
       - ./backups/pagila-data-apt-jsonb.backup:/docker-entrypoint-initdb.d/pagila-data-apt-jsonb.backup 
       - ./backups/restore-pagila-data-jsonb.sh:/docker-entrypoint-initdb.d/3-restore-pagila-data-jsonb.sh
+      # Mount the setup script
+      - ./scripts/primary.setup.sh:/docker-entrypoint-initdb.d/4-setup_db.sh
       # Add persistent storage
       - primary-data:/var/lib/postgresql/data
     command: postgres -c config_file=/usr/local/share/postgresql/postgresql.conf
@@ -37,10 +54,10 @@ services:
     networks:
       - pg_network
 
-  postgres-standby:
+  postgres-sync-standby:
     image: postgres:16-alpine
-    container_name: postgres-standby
-    hostname: postgres-standby
+    container_name: postgres-sync-standby
+    hostname: postgres-sync-standby
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -49,22 +66,22 @@ services:
       - "5433:5432"
     volumes:
       # Use the specific standby config
-      - ./conf/standby.conf:/usr/local/share/postgresql/postgresql.conf
+      - ./conf/standby.sync.conf:/usr/local/share/postgresql/postgresql.conf
       - ./scripts/standby.setup.sh:/usr/local/bin/init_standby.sh
-      - standby-data:/var/lib/postgresql/data
+      - sync-standby-data:/var/lib/postgresql/data
 
     # We use the standard Docker entrypoint for Postgres.
     # it will handle the initialization process on the very first start.
     entrypoint: ["init_standby.sh"]
     depends_on:
       postgres-primary:
-        condition: service_healthy
+        condition: service_started
     restart: always
     deploy:
       resources:
         limits:
           cpus: '1.0'
-          memory: 1024M
+          memory: 1g
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d db"]
       interval: 5s
@@ -73,12 +90,82 @@ services:
     networks:
       - pg_network
 
-  k6-tester:
+  postgres-async-standby:
+    image: postgres:16-alpine
+    container_name: postgres-async-standby
+    hostname: postgres-async-standby
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: db
+    ports:
+      - "5434:5432" # Async Read Port
+    volumes:
+      - ./conf/standby.async.conf:/usr/local/share/postgresql/postgresql.conf
+      - ./scripts/standby.setup.sh:/usr/local/bin/init_standby.sh
+      - async-standby-data:/var/lib/postgresql/data
+    entrypoint: ["init_standby.sh"]
+    depends_on:
+      postgres-primary:
+        condition: service_healthy 
+      postgres-sync-standby:
+        condition: service_started
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d db"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1g
+    networks:
+      - pg_network
+ 
+  postgres-outdated-standby:
+    image: postgres:12-alpine
+    container_name: postgres-delayed-standby
+    hostname: postgres-delayed-standby
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: db
+    ports:
+      - "5435:5432" # Delayed Read Port
+    volumes:
+      - ./conf/standby.async.conf:/usr/local/share/postgresql/postgresql.conf
+      - ./scripts/standby.setup.sh:/usr/local/bin/init_standby.sh
+      - delayed-standby-data:/var/lib/postgresql/data
+    entrypoint: ["init_standby.sh"]
+    depends_on:
+      postgres-primary:
+        condition: service_healthy 
+      postgres-sync-standby:
+        condition: service_started
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d db"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1g
+    networks:
+      - pg_network
+
+  k6-load-writer:
     image: grafana/xk6
-    container_name: k6-load-tester
+    container_name: k6-load-writer
     user: root
     environment:
       ARCH: ${ARCH?Define the architecture}
+      PGBOUNCER_HOST: pgbouncer # Pass host to setup script/k6
+      PGBOUNCER_PORT: 6432
     volumes:
       - ./workers:/home/k6/scripts
       - ./scripts/k6_tester.setup.sh:/usr/local/bin/init_setup.sh
@@ -86,17 +173,37 @@ services:
     networks:
       - pg_network
     depends_on:
-      postgres-primary:
-        condition: service_healthy
-      postgres-standby:
+      postgres-sync-standby:
         condition: service_healthy
     entrypoint: ["init_setup.sh"]
+    command: ["/home/k6/scripts/write.k6.js"]
+
+  k6-load-reader:
+    image: grafana/xk6
+    container_name: k6-load-reader
+    user: root
+    environment:
+      ARCH: ${ARCH?Define the architecture}
+      PGBOUNCER_HOST: pgbouncer # Pass host to setup script/k6
+      PGBOUNCER_PORT: 6432
+    volumes:
+      - ./workers:/home/k6/scripts
+      - ./scripts/k6_tester.setup.sh:/usr/local/bin/init_setup.sh
+      - k6-binary-store:/home/k6/bin
+    networks:
+      - pg_network
+    depends_on:
+      postgres-async-standby:
+        condition: service_healthy
+    entrypoint: ["init_setup.sh"]
+    command: ["/home/k6/scripts/read.k6.js"]
 
 volumes:
   primary-data:
-  standby-data:
+  sync-standby-data:
+  async-standby-data:
+  delayed-standby-data:
   k6-binary-store:
-
 
 networks:
   pg_network:
