Reconfigure settings. Add settings for pgbouncer. Split writing/reading tests

--- a/ch2/replication/samples/pg/conf/standby.sync.conf
+++ b/ch2/replication/samples/pg/conf/standby.sync.conf
@@ -1,11 +1,9 @@
 listen_addresses = '*'
 port = 5432
 
-# Disable Writes on Read-Replica
-default_transaction_read_only = on
-
 hot_standby = on
-recovery_min_apply_delay = '500ms'
+default_transaction_read_only = on
+primary_conninfo = 'host=postgres-primary port=5432 user=postgres password=postgres dbname=db application_name=postgres-sync-standby'
 
 # Logging
 log_destination = 'stderr' 
