--- a/ch2/replication/samples/pg/conf/primary.conf
+++ b/ch2/replication/samples/pg/conf/primary.conf
@@ -1,6 +1,7 @@
 # General Settings
 listen_addresses = '*'
 port = 5432
+max_connections = 50
 
 # Logging
 log_destination = 'stderr' 
@@ -13,9 +14,9 @@ log_disconnections = on
 log_hostname = on
 log_statement = 'ddl'
 
-wal_level = replica              # Required for replication
-max_wal_senders = 5              # Max number of replicas that can connect
-max_replication_slots = 5        # Max number of replication slots
-# To enable the synchronous replication
-# synchronous_commit = on
-# synchronous_standby_names = 'FIRST 1 ("postgres-standby")'  
+# Replication settings
+wal_level                 = replica     # Required for replication
+max_wal_senders           = 5           # Max number of replicas that can connect
+max_replication_slots     = 5           # Max number of replication slots
+synchronous_commit        = off         # Required for startup phase, in steady mode must be switched on
+synchronous_standby_names = 'FIRST 1 ("postgres-sync-standby")'  
